# CTF-k8

./: .gitignore  pyproject.toml
ctf_k8/: main.py  settings_example.yaml
ctf_k8/python/: cloudflare.py  ctfd.py  digital_ocean.py  kube.py
ctf_k8/templates/kubernetes/backend/: dep.yaml  service.yaml
ctf_k8/templates/kubernetes/frontend/: dep.yaml  ingress.yaml  scale.yaml  secret.yaml  service.yaml
